--- a/templates/teachers.html
+++ b/templates/teachers.html
@@ -61,49 +61,61 @@
   <div class="modules-grid">
 
     <!-- === Upload Related Tools === -->
-    <div class="module-item blue" data-page="uploads">
-      <i class="fa-solid fa-upload"></i> Upload Exams
+    <div class="module-item blue" data-page="uploads.html">
+      <i class="fa-solid fa-upload"></i>
+      Upload Exams
     </div>
 
-    <div class="module-item teal" data-page="uploads">
-      <i class="fa-solid fa-file-lines"></i> Past Questions
+    <div class="module-item teal" data-page="past_questions.html">
+      <i class="fa-solid fa-file-lines"></i>
+      Past Questions
     </div>
 
-    <div class="module-item dark" data-page="uploads">
-      <i class="fa-solid fa-list-check"></i> Exam Dashboard
+    <div class="module-item dark" data-page="exam_dashboard.html">
+      <i class="fa-solid fa-list-check"></i>
+      Exam Dashboard
     </div>
 
     <!-- === Results Related Tools === -->
-    <div class="module-item green" data-page="dash_results">
-      <i class="fa-solid fa-chart-bar"></i> View Results
+    <div class="module-item green" data-page="dash_results.html">
+      <i class="fa-solid fa-chart-bar"></i>
+      View Results
     </div>
 
-    <div class="module-item yellow" data-page="dash_results">
-      <i class="fa-solid fa-file-excel"></i> Export to Excel
+    <div class="module-item yellow" data-page="export_results.html">
+      <i class="fa-solid fa-file-excel"></i>
+      Export to Excel
     </div>
 
-    <div class="module-item red" data-page="dash_results">
-      <i class="fa-solid fa-print"></i> Print Results
+    <div class="module-item red" data-page="print_results.html">
+      <i class="fa-solid fa-print"></i>
+      Print Results
     </div>
 
-  </div>
-</div>
-
-    <!-- === General Utilities === -->
+    <!-- === General Utilities (Now inside same card) === -->
     <div class="module-item purple" data-page="reports.html">
-      <i class="fa-solid fa-file-pdf"></i> Generate Reports
+      <i class="fa-solid fa-file-pdf"></i>
+      Generate Reports
     </div>
+
     <div class="module-item orange" data-page="analytics.html">
-      <i class="fa-solid fa-chart-pie"></i> Analytics
+      <i class="fa-solid fa-chart-pie"></i>
+      Analytics
     </div>
+
     <div class="module-item gray" data-page="resources.html">
-      <i class="fa-solid fa-book"></i> Resources
+      <i class="fa-solid fa-book"></i>
+      Resources
     </div>
+
     <div class="module-item pink" data-page="settings.html">
-      <i class="fa-solid fa-gear"></i> Settings
+      <i class="fa-solid fa-gear"></i>
+      Settings
     </div>
+
   </div>
 </div>
+
 
 
   <!-- DYNAMIC CONTENT AREA -->
